# LMN-Hydro

./: .gitignore  CMakeLists.txt  README.md
docs/doxygen/: main.docx
docs/source/: conf.py  index.rst  installation.rst
docs/source/outputs/: movies.rst
docs/source/tutorials/: KHI.rst
examples/: CMakeLists.txt  fluid_KHI_Kokkos.cpp  fluid_KHI_kokkos.cpp
include/: CMakeLists.txt  SnapshotWriter.hpp  fluid.hpp  fluid_KHI.hpp  fluid_kokkos.hpp
py/: CMakeLists.txt  ConservedQuantityPlotter.py  MovieMaker.sh  SnapshotPlotter.py  mpl_style.txt
src/: CMakeLists.txt  Simple_KHI.cpp  SnapshotWriter.cpp  SnapshotWritter.cpp  fluid.cpp  fluid_KHI.cpp  fluid_kokkos.cpp  khi_sim  timestep_benchmark.cpp
tests/: CMakeLists.txt  component_benchmark.cpp  component_benchmark_kokkos.cpp  timestep_benchmark_kokkos.cpp
